--- a/package.yaml
+++ b/package.yaml
@@ -6,8 +6,8 @@ author:              "ghlin"
 maintainer:          "2012.2.9.ghl@gmail.com"
 copyright:           "2019 ghlin"
 
-extra-source-files:
-- README.md
+# extra-source-files:
+# - README.md
 
 description:         A functional programming language.
 
@@ -36,13 +36,3 @@ executables:
     dependencies:
     - Grapha
 
-tests:
-  Grapha-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - Grapha
